--- a/.github/workflows/practice.yaml
+++ b/.github/workflows/practice.yaml
@@ -28,5 +28,5 @@ jobs:
         with:
           node-version: 20.x
       - run: npm ci
-      - run: npm build
+      - run: npm run build
       - run: "echo build completed"
