--- a/.github/workflows/practice.yaml
+++ b/.github/workflows/practice.yaml
@@ -12,3 +12,6 @@ jobs:
       - run: npm run lint
       - run: npm run test
       - run: npm run build
+      - uses: actions/upload-artifacts
+        with:
+          path: dist 
