added upload artifacts cmd

--- a/.github/workflows/practice.yaml
+++ b/.github/workflows/practice.yaml
@@ -14,4 +14,5 @@ jobs:
       - run: npm run build
       - uses: actions/upload-artifacts
         with:
+          name: dist-file
           path: dist 
